<resources>
    <string name="action_settings">Settings</string>
    <string name="action_settings_default">Set as default launcher</string>
    <string name="home_fragment_label">Home Fragment</string>
    <string name="draw_fragment_label">Draw Fragment</string>
    <string name="favorite_fragment_label">Favorite Fragment</string>
    <string name="hidden_fragment_label">Hidden Fragment</string>
    <string name="settings_fragment_label">Settings Fragment</string>
    <string name="widgets_fragment_label">Widgets Fragment</string>
    <string name="favorite_fragment_name">Favorite Apps</string>
    <string name="hidden_fragment_name">Hidden Apps</string>
    <string name="search">Search</string>
    <string name="bottom_dialog_app_rename">Rename</string>
    <string name="bottom_dialog_add_to_home">Add to Home Screen</string>
    <string name="bottom_dialog_order_home_apps">Order Home Apps</string>
    <string name="bottom_dialog_remove_from_home">Remove from Home Screen</string>
    <string name="bottom_dialog_add_to_hidden">Hidden App</string>
    <string name="bottom_dialog_remove_to_hidden">Remove Hidden App</string>
    <string name="bottom_dialog_add_to_lock">Lock App</string>
    <string name="bottom_dialog_remove_to_unlock">Unlock App</string>
    <string name="bottom_dialog_app_info">App Info</string>
    <string name="bottom_dialog_app_uninstall">Uninstall App</string>
    <string name="settings_name">Launcher Settings</string>
    <string name="settings_version">%1$s Version: %2$s</string>
    <string name="settings_widgets_name">Widgets Settings</string>
    <string name="settings_title_home_display_preferences">Display</string>
    <string name="settings_title_home_behavior_preferences">Behavior</string>
    <string name="settings_title_home_appearance_preferences">Appearance</string>
    <string name="settings_title_date_style">Date Style</string>
    <string name="settings_title_time_style">Time Style</string>
    <string name="settings_title_app_manager">App Manage</string>
    <string name="settings_title_gestures">Gestures</string>
    <string name="settings_title_miscellaneous">Miscellaneous</string>
    <string name="settings_title_backups">Backups</string>
    <string name="settings_title_others">Others</string>
    <string name="settings_display_status_bar">Show Status Bar</string>
    <string name="settings_display_date">Show Date</string>
    <string name="settings_display_time">Show Time</string>
    <string name="settings_display_battery">Show Battery</string>
    <string name="settings_display_daily_word">Show Daily Word</string>
    <string name="settings_display_app_icons">Show App Icons</string>
    <string name="settings_display_automatic_keyboard">Auto Show Keyboard</string>
    <string name="settings_display_auto_open_apps">Auto Open Last App</string>
    <string name="settings_display_lock_settings">Lock Settings</string>
    <string name="settings_appearance_text_size_title">Size</string>
    <string name="settings_appearance_color_title">Color</string>
    <string name="settings_appearance_alignment_title">Alignment</string>
    <string name="settings_appearance_padding_title">Padding</string>
    <string name="settings_appearance_wallpaper">Custom Wallpaper</string>
    <string name="settings_appearance_home_date_alignment">Date Alignment</string>
    <string name="settings_appearance_home_time_alignment">Time Alignment</string>
    <string name="settings_appearance_home_app_alignment">Home App Alignment</string>
    <string name="appearance_bottom_dialog_text_size_title">Size</string>
    <string name="appearance_bottom_dialog_text_color_title">Color</string>
    <string name="appearance_bottom_dialog_alignment_title">Alignment</string>
    <string name="appearance_bottom_dialog_padding_title">Padding</string>
    <string name="appearance_bottom_dialog_desc_date">Date\u0020:\u0020</string>
    <string name="appearance_bottom_dialog_desc_time">Time\u0020:\u0020 </string>
    <string name="appearance_bottom_dialog_desc_app">App\u0020:\u0020</string>
    <string name="appearance_bottom_dialog_desc_word">Word\u0020:\u0020</string>
    <string name="appearance_bottom_dialog_desc_battery">Battery\u0020:\u0020 </string>
    <string name="appearance_bottom_dialog_desc_widget_background">Widget Background\u0020:\u0020</string>
    <string name="appearance_bottom_dialog_desc_widget_text">Widget Text\u0020:\u0020</string>
    <string name="settings_manager_favorite">Favorite Apps</string>
    <string name="settings_manager_hidden">Hidden Apps</string>
    <string name="settings_select_wallpaper">Select Wallpaper</string>
    <string name="settings_double_tap">Double Tap</string>
    <string name="settings_swipe_up">Swipe Up</string>
    <string name="settings_swipe_down">Swipe Down</string>
    <string name="settings_swipe_left">Swipe Left</string>
    <string name="settings_swipe_right">Swipe Right</string>
    <string name="settings_select_search_engine">Select a Search Engine</string>
    <string name="settings_search_engine">Search Engine</string>
    <string name="settings_select_launcher_font">Select a Font Family</string>
    <string name="settings_launcher_font">Font Family</string>
    <string name="settings_others_share">Share</string>
    <string name="settings_others_feedback">Feedback</string>
    <string name="settings_others_github">Github</string>
    <string name="settings_backups_backup">Backup Preferences</string>
    <string name="settings_backups_restore">Restore Preferences</string>
    <string name="settings_reload_app_backup">Preferences backed up.</string>
    <string name="settings_reload_app_restore">Preferences restored. Restarting.</string>
    <string name="settings_actions_open_app">Open App</string>
    <string name="settings_actions_open_app_run">Open %s</string>
    <string name="settings_actions_lock_screen">Lock Screen</string>
    <string name="settings_actions_show_notifications">Show Notifications</string>
    <string name="settings_actions_show_app_list">Show Apps List</string>
    <string name="settings_actions_show_favorite_list">Show Favorites List</string>
    <string name="settings_actions_show_hidden_list">Show Hidden List</string>
    <string name="settings_actions_open_quick_settings">Open Quick Settings</string>
    <string name="settings_actions_show_recents">Show Recents</string>
    <string name="settings_actions_show_widgets">Show Widgets</string>
    <string name="settings_actions_open_power_dialog">Open Power Dialog</string>
    <string name="settings_actions_take_a_screenshot">Take a ScreenShot</string>
    <string name="settings_actions_disabled">Disabled</string>
    <string name="settings_units_metric">Metric</string>
    <string name="settings_units_imperial">Imperial</string>
    <string name="settings_font_system">System</string>
    <string name="authentication_title">Authentication</string>
    <string name="authentication_subtitle">Log in using your biometric credentials.</string>
    <string name="authentication_cancel">Authentication Cancel</string>
    <string name="authentication_succeeded">Authentication Succeeded</string>
    <string name="authentication_failed">Authentication Failed</string>
    <string name="authentication_error">Authentication Error: %1$s(code %2$d)</string>
    <string name="bottom_alignment_star">Star</string>
    <string name="bottom_alignment_center">Center</string>
    <string name="bottom_alignment_end">End</string>
    <string name="accessibility_settings_title">Accessibility Settings</string>
    <string name="accessibility_settings_enable">Enable</string>
    <string name="accessibility_settings_disable">Disable</string>
    <string name="accessibility_service_name">Easy Launcher Actions Service</string>
    <string name="accessibility_service_desc">Please turn on accessibility service to use double tap to lock feature in Easy Launcher.\n\nThis permission is used only to turn off your screen.Our accessibility service does not collect or share any data.</string>
    <string name="admin_permission_message">Easy launcher promises to use lock screen permission responsibly. Easy launcher does not collect or share any data.</string>
</resources>