<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/HomeFragment">

    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.github.droidworksstudio.launcher.ui.home.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.github.droidworksstudio.launcher.ui.settings.SettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/WidgetsFragment"
        android:name="com.github.droidworksstudio.launcher.ui.widgets.WidgetFragment"
        android:label="@string/widgets_fragment_label"
        tools:layout="@layout/fragment_widgets" />

    <fragment
        android:id="@+id/SettingsFeaturesFragment"
        android:name="com.github.droidworksstudio.launcher.ui.settings.SettingsFeaturesFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_settings_features" />

    <fragment
        android:id="@+id/SettingsLookFeelFragment"
        android:name="com.github.droidworksstudio.launcher.ui.settings.SettingsLookFeelFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_settings_look_feel" />

    <fragment
        android:id="@+id/SettingsWidgetFragment"
        android:name="com.github.droidworksstudio.launcher.ui.settings.SettingsWidgetFragment"
        android:label="@string/widgets_fragment_label"
        tools:layout="@layout/fragment_settings_widgets" />

    <fragment
        android:id="@+id/DrawFragment"
        android:name="com.github.droidworksstudio.launcher.ui.drawer.DrawFragment"
        android:label="@string/draw_fragment_label"
        tools:layout="@layout/fragment_draw" />

    <fragment
        android:id="@+id/FavoriteFragment"
        android:name="com.github.droidworksstudio.launcher.ui.favorite.FavoriteFragment"
        android:label="@string/favorite_fragment_label"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/SettingsAdvancedFragment"
        android:name="com.github.droidworksstudio.launcher.ui.settings.SettingsAdvancedFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_settings_advanced" />

    <fragment
        android:id="@+id/HiddenFragment"
        android:name="com.github.droidworksstudio.launcher.ui.hidden.HiddenFragment"
        android:label="@string/hidden_fragment_label"
        tools:layout="@layout/fragment_hidden" />

</navigation>