<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/SettingsFragment">

    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.github.droidworksstudio.launcher.ui.settings.SettingsFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_SettingsFragment_to_FavoriteFragment"
            app:destination="@id/FavoriteFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_SettingsFragment_to_HiddenFragment"
            app:destination="@id/HiddenFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>

    <fragment
        android:id="@+id/FavoriteFragment"
        android:name="com.github.droidworksstudio.launcher.ui.favorite.FavoriteFragment"
        android:label="@string/favorite_fragment_label"
        tools:layout="@layout/fragment_favorite" />

    <fragment
        android:id="@+id/HiddenFragment"
        android:name="com.github.droidworksstudio.launcher.ui.hidden.HiddenFragment"
        android:label="@string/hidden_fragment_label"
        tools:layout="@layout/fragment_favorite" />

</navigation>