<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/bottom_sheet0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
        android:orientation="vertical"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/bottom_sheet_rename"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@android:color/white"
                android:background="@android:color/transparent"
                android:textSize="@dimen/bottom_dialog_text_large"
                android:text="@string/bottom_dialog_app_rename">
            </androidx.appcompat.widget.AppCompatEditText>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bottom_sheet_rename_done"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:gravity="center"
                android:textSize="@dimen/bottom_dialog_text_small"
                android:text="Save"/>

        </LinearLayout>


        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bottom_sheet_fav_hidden"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/bottom_dialog_text_large"
                android:text="@string/bottom_dialog_remove_from_home">

            </androidx.appcompat.widget.AppCompatTextView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bottom_sheet_order"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/bottom_dialog_text_large"
                android:text="@string/bottom_dialog_order_home_apps">

            </androidx.appcompat.widget.AppCompatTextView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bottom_sheet_hidden"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/bottom_dialog_text_large"
                android:text="@string/bottom_dialog_add_to_hidden">

            </androidx.appcompat.widget.AppCompatTextView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bottom_sheet_lock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/bottom_dialog_text_large"
                android:text="@string/bottom_dialog_add_to_lock">

            </androidx.appcompat.widget.AppCompatTextView>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bottom_sheet_uninstall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/bottom_dialog_text_large"
                android:text="@string/bottom_dialog_app_uninstall">

            </androidx.appcompat.widget.AppCompatTextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_sheet4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
            android:orientation="horizontal"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/bottom_sheet_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/bottom_dialog_text_large"
                android:text="@string/bottom_dialog_app_info">

            </androidx.appcompat.widget.AppCompatTextView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>